--- a/app/assets/stylesheets/_hero.scss
+++ b/app/assets/stylesheets/_hero.scss
@@ -76,7 +76,7 @@
       h1 {
            font-size: 3rem;
            font-weight: 200;
-      }
+  }
 }
 
 .hero-buttons{
@@ -147,7 +147,6 @@
   @include breakpoint(medium) {
     display: block;
   }
-
 }
 
 .scroll-arrow {
@@ -168,6 +167,7 @@
   float: left;
   margin: 5px;
 }
+
 .topvid-button {
     display:inline-block;
     float: left;
@@ -215,7 +215,7 @@
   height:50px;
 }
 
-.shifty:hover .home-light-img {
+.shifty:hover + .home-light-img {
   -webkit-animation: shifty 2s 1;
   display:block;
 }
