adding other colors

--- a/app/assets/stylesheets/general/_constants.scss
+++ b/app/assets/stylesheets/general/_constants.scss
@@ -2,7 +2,6 @@
 // -------------------------------------------------------------- Colors ------------------------------------------------------------------ //
 // -------------------------------------------------------------------------------------------------------------------------------------------- //
 		
-$blue: #81B6DB;  // blue  //
 $green: #77DD77;    // green // 
 $red: #FF4955;   // red //
 $darkred: #FF5567; // darker red //
@@ -15,6 +14,14 @@ $grey: #888; // grey //
 $purple: #8171B6; // purple //
 $lightpurple: #9181C6; // purple //
 $lighterpurple: #E1D1F9; // purple //
-$yellow: #FFF5AC; // yellow //
 $teal: #00AAA3; // teal //
 $lightteal: #30BAB3; // teal //
+
+// -------------------------------------------------------------------------------------------------------------------------------------------- //
+// --------------------------------------------------------- Brand One ------------------------------------------------------------------ //
+// -------------------------------------------------------------------------------------------------------------------------------------------- //
+
+$darkblue: #FFCC00:
+$blue: #203E5F;
+$yellow:#FFCC00;
+$cream: #FEE5B1;
