--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -6,7 +6,7 @@
   width:100%;
   height:65px;
   position:fixed;
-  background-color:rgba(129,113,182,1);
+  background-color:#203E5F;
   // background-color:rgba(0,0,0,0.6);
   box-shadow:0 0 90px 0 rgba(0,0,0,0.4);
   z-index:10;
