allowing images to be added for post in form

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,7 +21,11 @@
   </div>
 
   <div class="field">
-    <%= f.text_field :description, placeholder:'Description' , class: 'post-description-field input' %>
+    <%= f.text_field :image_url, placeholder:'Image URL (optional)' , class: 'post-image-url-field input' %>
+  </div>
+
+  <div class="field">
+    <%= f.text_field :description, placeholder:'Description (optional)' , class: 'post-description-field input' %>
   </div>
 
   <div class="field checkbox-field">
