phone cpver photo

--- a/app/assets/stylesheets/_cover.scss
+++ b/app/assets/stylesheets/_cover.scss
@@ -82,13 +82,19 @@
     border-left: none;
     position: relative;
 }
+
 .no-video .video-container video,
 .touch .video-container video {
     display: none;
 }
+
 .no-video .video-container .poster,
 .touch .video-container .poster {
     display: block !important;
+}
+
+video::-webkit-media-controls {
+    display:none !important;
 }
 
 .video-container {
