--- a/app/views/application/_home_cover.html.erb
+++ b/app/views/application/_home_cover.html.erb
@@ -2,13 +2,11 @@
                 <div class="img-cover"></div>
                 <div class="homepage-hero-module">
                   <div class="video-container">
-                      <video autoplay loop class="fillWidth">
+                      <video autoplay loop class="fillWidth" poster="assets/blurred-cover-photo.jpg" >
                           <source src="assets/bulbs.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
                       </video>
                   </div>
-                  <div class="poster hidden">
-                      <img src="assets/blurred-cover-photo.jpg" alt="">
-                  </div>
+
                 </div>
                   <div class="hero-title">
                     <h1><%= @title %> </h1>
