updates to routes nd ting

--- a/app/assets/stylesheets/_hero.scss
+++ b/app/assets/stylesheets/_hero.scss
@@ -90,7 +90,7 @@
   }
 }
 
-.topvid-button,.mostrecent-button , .shuffle-button {
+.mostliked-button,.mostrecent-button , .shuffle-button {
   font-size:1.2rem;
   position:relative;
   padding:10px;
@@ -168,7 +168,7 @@
   margin: 5px;
 }
 
-.topvid-button {
+.mostliked-button {
     display:inline-block;
     float: left;
 }
