--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
                   <%= render 'shared/flash_messages' %>
               </div>
         <% end %>
-          <% if params[:name].present? || current_page?("/top_videos") || current_page?("/latest") || current_page?('/profile') %>
+          <% if params[:name].present? || current_page?("/most_liked") || current_page?("/latest") || current_page?('/profile') %>
                 <%= render 'short_cover' %>
           <% elsif current_page?("/") || current_page?("/posts") %>
                 <%= render 'home_cover' %>
