--- a/app/views/application/_liked_button.html.erb
+++ b/app/views/application/_liked_button.html.erb
@@ -1,3 +1,3 @@
 <div class="liked-section">
-              <%= nav_link_to 'MOST LIKED' , posts_topvids_path %>
+              <%= nav_link_to 'MOST LIKED' , posts_mostliked_path %>
 </div>
