fixing signin funnel

--- a/app/assets/stylesheets/shared/_forms.scss
+++ b/app/assets/stylesheets/shared/_forms.scss
@@ -194,6 +194,13 @@
 	margin-top: 20px;
 }
 
+.forgot-password {
+	color:$white;
+	text-decoration: none;
+	font-size: 0.75rem;
+	float: right;
+}
+
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - Signup Tab - - - - - - - - - - - - - - -  - - - - - - - - - -  */
 
 .signup-form-title {
