--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,7 +1,9 @@
-<h2>Resend confirmation instructions</h2>
+<div class="form-title">
+<h1>Resend confirmation instructions</h1>
+</div>
 
+<div class="form">
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -14,3 +16,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
