--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,21 @@
-<h2>Forgot your password?</h2>
+<div class="form-title">
+	<h1>Forgot your password?</h1>
+</div>
 
+<div class="form">
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, placeholder:'Enter Email' , class: 'password-reset-field input' %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "Reset Password", class: 'password-reset-submit submit' %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
+	
