--- a/app/assets/stylesheets/_login.scss
+++ b/app/assets/stylesheets/_login.scss
@@ -1,6 +1,6 @@
 .login-section {
   margin-top: 10%;
-  z-index:6;  
+  z-index:6;
   display: none;
 
   img{
@@ -11,26 +11,26 @@
   }
 
   @include breakpoint(small) {
-    display: block;  
+    display: block;
     float: right;
     margin-top: 0px;
-    margin-right: 5px; 
+    margin-right: 5px;
       height: 65px;
 
-  } 
+  }
 
     .user-login {
       text-decoration:none;
       font-size: 0.8rem;
       line-height: 65px;
       margin: 0;
-      padding: 0px; 
+      padding: 0px;
       color:$white;
       cursor:pointer;
 
         @include breakpoint(small) {
-          padding: 10px; 
-        } 
+          padding: 10px;
+        }
 
         &:hover {
           color:$lighterpurple;
@@ -45,43 +45,43 @@
             display:block;
             height: 40px;
             width: 40px;
-            padding:0; 
+            padding:0;
             margin: 0;
             border-radius:50%;
           }
       }
-    
+
     .user-popup {
         display:none;
         position:absolute;
         z-index: 6;
         top:65px;
         margin: 0;
-        right:50px;
+        right:40px;
         background-color: rgba(0,0,0,0.6);
         border-radius:0 0 5px 5px;
         box-shadow: 0px 6px 60px -5px $black;
-      
+
       ul {
         display: block;
         margin: 0;
         padding: 0;
         float: left;
-        
+
         .popup-text {
           margin-bottom: 10px;
           border-bottom: 1px solid $grey;
           float:none;
         }
-     
+
         li {
           list-style:none;
           margin-top: 35%;
 
           @include breakpoint(small) {
-            margin: 10px;    
+            margin: 10px;
           }
-          
+
           .popup-username {
             font-weight: 500;
             margin:0;
@@ -91,10 +91,10 @@
 
             @include breakpoint(small) {
               margin-top: 10px;
-              margin-bottom: 10px; 
+              margin-bottom: 10px;
             }
           }
-          
+
 
           p {
             text-decoration: none;
@@ -109,7 +109,7 @@
               padding: 5px;
             }
           }
-          
+
           a {
             text-decoration:none;
             color:$white;
@@ -139,14 +139,15 @@
 
 
     .user-popup-sidebar {
-      
+
       ul {
         display: block;
         margin: 0;
         padding: 0;
         float: left;
         margin-top: -10px;
-        
+        font-size: 0.8rem;
+
         @include breakpoint(small) {
           margin: 0;
         }
@@ -157,15 +158,15 @@
           border-bottom: 1px solid $grey;
           float:none;
         }
-     
+
         li {
           list-style:none;
           margin-top: 35%;
 
           @include breakpoint(small) {
-            margin: 10px;    
+            margin: 10px;
           }
-          
+
           .popup-username {
             font-weight: 500;
             margin:0px;
@@ -177,7 +178,7 @@
               margin-bottom: 10px;
             }
           }
-          
+
 
           p {
             text-decoration: none;
@@ -192,7 +193,7 @@
               padding: 5px;
             }
           }
-          
+
           a {
             text-decoration:none;
             color:$white;
@@ -200,7 +201,7 @@
             color: #FFF;
             font-size: 1rem;
             margin-top: 10%;
-            
+
             &:hover {
                   color:$lighterpurple;
                 }
@@ -229,7 +230,7 @@
 
 // .login-section-sidebar {
 //   margin-top: 10%;
-//   z-index:6;  
+//   z-index:6;
 
 //   img{
 //     width: 40px;
@@ -239,26 +240,26 @@
 //   }
 
 //   @include breakpoint(small) {
-//     display: block;  
+//     display: block;
 //     float: right;
 //     margin-top: 0px;
-//     margin-right: 5px; 
+//     margin-right: 5px;
 //     height: 65px;
 
-//   } 
+//   }
 
 //     .user-login {
 //       text-decoration:none;
 //       font-size: 1.2rem;
 //       line-height: 65px;
 //       margin: 0;
-//       padding: 0px; 
+//       padding: 0px;
 //       color:$white;
 //       cursor:pointer;
 
 //         @include breakpoint(small) {
-//           padding: 10px; 
-//         } 
+//           padding: 10px;
+//         }
 
 //         &:hover {
 //           color:$lighterpurple;
@@ -273,12 +274,12 @@
 //             display:block;
 //             height: 40px;
 //             width: 40px;
-//             padding:0; 
+//             padding:0;
 //             margin: 0;
 //             border-radius:50%;
 //           }
 //       }
-    
+
 //     .user-popup {
 
 //       display: block;
@@ -297,28 +298,28 @@
 //         background-color: rgba(0,0,0,0.6);
 //         border-radius:0 0 5px 5px;
 //         box-shadow: 0px 6px 60px -5px $black;
-//       } 
-      
+//       }
+
 //       ul {
 //         display: block;
 //         margin: 0;
 //         padding: 0;
 //         float: left;
-        
+
 //         .popup-text {
 //           margin-bottom: 10px;
 //           border-bottom: 1px solid $grey;
 //           float:none;
 //         }
-     
+
 //         li {
 //           list-style:none;
 //           margin-top: 35%;
 
 //           @include breakpoint(small) {
-//             margin: 10px;    
+//             margin: 10px;
 //           }
-          
+
 //           .popup-username {
 //             font-weight: 500;
 //             margin:0px;
@@ -327,10 +328,10 @@
 
 //             @include breakpoint(small) {
 //               margin-top: 30px;
-//               margin-bottom: 10px; 
+//               margin-bottom: 10px;
 //             }
 //           }
-          
+
 
 //           p {
 //             text-decoration: none;
@@ -345,7 +346,7 @@
 //               padding: 5px;
 //             }
 //           }
-          
+
 //           a {
 //             text-decoration:none;
 //             color:$white;
@@ -364,7 +365,7 @@
 //                 color:#ddd;
 //               }
 //             }
-                
+
 //                 &:hover a {
 //                   font-weight:500;
 //                 }
@@ -379,14 +380,14 @@
 //   }
 
 //     .user-popup-sidebar {
-      
+
 //       ul {
 //         display: block;
 //         margin: 0;
 //         padding: 0;
 //         float: left;
 //         margin-top: -10px;
-        
+
 //         @include breakpoint(small) {
 //           margin: 0;
 //         }
@@ -396,15 +397,15 @@
 //           border-bottom: 1px solid $grey;
 //           float:none;
 //         }
-     
+
 //         li {
 //           list-style:none;
 //           margin-top: 35%;
 
 //           @include breakpoint(small) {
-//             margin: 10px;    
+//             margin: 10px;
 //           }
-          
+
 //           .popup-username {
 //             font-weight: 500;
 //             margin:0px;
@@ -416,7 +417,7 @@
 //               margin-bottom: 10px;
 //             }
 //           }
-          
+
 
 //           p {
 //             text-decoration: none;
@@ -431,7 +432,7 @@
 //               padding: 5px;
 //             }
 //           }
-          
+
 //           a {
 //             text-decoration:none;
 //             color:$white;
@@ -450,7 +451,7 @@
 //                 color:#ddd;
 //               }
 //             }
-                
+
 //                 &:hover a {
 //                   font-weight:500;
 //                 }
