--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,37 +1,49 @@
- <div class="sidebar area" data-sidebar >
-
-        <div class="sidebar-buttons">
+ <div class="sidebar area" data-sidebar >  
             <ul>
-              <%= render 'login_sidebar' %>
+                  <!-- Login Section -->
 
-              <%= render 'submit' %>
-            </ul>
-            <ul class="admin">
+                 <% if user_signed_in? %>
+                      <div class="sidebar-gravatar login-links">
+                             <%= link_to profile_path do %>
+                                  <%= gravatar_image_tag(current_user.email.gsub('spam', 'mdeering'), :alt => current_user.username) %>
+                              <% end %>
+                      </div>
+                      <li class="login-links"><p class="username-sidebar"><%= current_user.username %></p></li>
+                      <li class="login-links"><%= link_to 'LOGOUT', destroy_user_session_path, method: :delete %></li>
+                  <%else%>
+                      <li class="login-links"><%= link_to "SIGN IN / SIGN UP" , new_user_session_path%></li>
+                  <% end %>
+                
+                  <!-- Nav Button Section -->
+
+
+                 <li class="user-links"><%= nav_link_to 'LATEST' , posts_mostrecent_path  %></li>
+                 <li class="user-links"><%= nav_link_to 'MOST LIKED' , posts_mostliked_path  %></li>
+                 <li class="user-links">
+                       <% if params[:p] == "shuffle" %>
+                            <%= nav_link_to 'SHUFFLE AGAIN!' , posts_shuffle_path(p: "shuffle")  %>
+                       <% else %>
+                            <%= nav_link_to 'SHUFFLE!' , posts_shuffle_path(p: "shuffle")  %>
+                       <% end %>
+                 </li>
+
+                  <!-- Contribute Section -->
+
+                  <li class="contribute-link"><%= link_to 'CONTRIBUTE', submit_path %></li>
+
+                  <!-- Admin Section -->
+
                  <% if current_user.try(:admin?) %>
-                      <li><%= link_to 'NEW POST' , new_post_path , class: 'sidebar-links new-post-sidebar' %></li>
-                      <li><%= link_to 'NEW CATEGORY' , new_category_path , class: 'sidebar-links new-category-sidebar' %></li>
-                      <li><%= link_to 'CONTRIBUTIONS' , contributions_path , class: 'sidebar-links contributions-sidebar' %></li>
+                      <li class="admin-links"><%= link_to 'NEW POST' , new_post_path  %></li>
+                      <li class="admin-links"><%= link_to 'NEW CATEGORY' , new_category_path  %></li>
+                      <li class="admin-links"><%= link_to 'CONTRIBUTIONS' , contributions_path  %></li>
                   <%end%>
-            </ul>
 
-            <ul class="user-links">
-              <li><%= nav_link_to 'LATEST' , posts_mostrecent_path , class: 'sidebar-links latest-sidebar' %></li>
-              <li><%= nav_link_to 'MOST LIKED' , posts_mostliked_path , class: 'sidebar-links most-liked-sidebar' %></li>
-              <li>
-                <% if params[:p] == "shuffle" %>
-                  <%= nav_link_to 'SHUFFLE AGAIN!' , posts_shuffle_path(p: "shuffle") , class: 'sidebar-links shuffle-sidebar' %>
-                <% else %>
-                  <%= nav_link_to 'SHUFFLE!' , posts_shuffle_path(p: "shuffle") , class: 'sidebar-links shuffle-sidebar' %>
-                <% end %>
-              </li>
-            </ul>
 
-            <ul>
-                  <div class="static-links">
-                    <li><div class="static-pages"><%= nav_link_to 'About', application_about_path %></div></li>
-                    <li><div class="static-pages"><%= nav_link_to 'Copyright', application_copyright_path %></div> </li>
+                  <!-- Static Section -->
+                  <div class="static-section">
+                      <li class="static-links"><%= nav_link_to 'ABOUT', application_about_path %></li>
+                      <li class="static-links"><%= nav_link_to 'COPYRIGHT', application_copyright_path %> </li>
                   </div>
             </ul>
-        </div>
-
-      </div>
+</div>
