some serious stlying by JC

--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -91,6 +91,10 @@
 
       .username-sidebar {
         text-align:center;
+        
+      &:hover {
+        background-color: $teal;
+      }
       }
 
       .login-links {
