--- a/app/views/application/_cover.html.erb
+++ b/app/views/application/_cover.html.erb
@@ -1,11 +1,10 @@
 <div class="hero-cover-other">
-	<% if current_page?('/profile') %>
+	<% if current_page?('/profile') || current_page?('/shuffle') %>
 	    <div class="blue-img-cover"></div>
 	    <%= image_tag('blurred-cover-photo', class: 'cover-photo-img') %> 
 	<% else %>
 	  <%= link_to root_path do %>
 	    <div class="blue-img-cover"></div>
-	    <%= image_tag('blurred-cover-photo' ,class: 'cover-photo-img') %> 
 	  <% end %>
 	<% end %>
 </div>
