--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -8,7 +8,7 @@
                                   <%= gravatar_image_tag(current_user.email.gsub('spam', 'mdeering'), :alt => current_user.username) %>
                               <% end %>
                       </div>
-                      <li class="login-links"><p class="username-sidebar"><%= current_user.username %></p></li>
+                      <li class="login-links username-sidebar"><p><%= current_user.username %></p></li>
                       <li class="login-links"><%= link_to 'LOGOUT', destroy_user_session_path, method: :delete %></li>
                   <% else %>
                       <li class="login-links"><%= link_to "SIGN IN / SIGN UP" , new_user_session_path%></li>
