--- a/app/assets/stylesheets/_cover.scss
+++ b/app/assets/stylesheets/_cover.scss
@@ -18,11 +18,15 @@
 
 .hero-cover-other {
   width:100%;
-  height: 100vh;                // Need to decide on using vh/vw ?????
+  height: 140vh;                // Need to decide on using vh/vw ?????
   margin:0;
   float:left;
   position:relative;
   overflow:hidden;
+  
+  @include breakpoint(small) {
+    height: 100vh; 
+  }
 }
 
 .short-hero-cover {
@@ -64,9 +68,6 @@
         width:1500px;
       }
 
-      @include breakpoint(large) {
-        width:100%;
-      }
 }
 
 .homepage-hero-module {
