--- a/app/assets/stylesheets/_hero.scss
+++ b/app/assets/stylesheets/_hero.scss
@@ -70,16 +70,24 @@
   width: 100%;
   margin: 0;
   padding: 0;
-  top:35%;
+  top:40%;
   color:$white;
   
+    @include breakpoint(small) {
+              top:35%;
+            }
+  
       h1 {
-           font-size: 3rem;
+           font-size: 2rem;
            font-weight: 200;
+           
+           @include breakpoint(small) {
+              font-size: 3rem;
+            }
   }
 }
 
-.hero-buttons{
+.hero-buttons {
   position: absolute;
   z-index:7;
   top:75%;
@@ -91,9 +99,9 @@
 }
 
 .mostliked-button,.mostrecent-button , .shuffle-button {
-  font-size:1.2rem;
+  font-size:1rem;
   position:relative;
-  padding:10px;
+  padding:5px;
   cursor:pointer;
   text-decoration:none;
   color:$white;
@@ -108,6 +116,7 @@
 
   @include breakpoint(small) {
     font-size:1.5rem;
+    padding:10px;
   }
 }
 
