--- a/app/assets/stylesheets/_posts.scss
+++ b/app/assets/stylesheets/_posts.scss
@@ -492,7 +492,7 @@ iframe {
 
 .button {
   position:absolute;
-  z-index:10;
+  z-index:6;
   text-align:center;
   background-color: rgba(50,50,50,0.8); 
   width: 5.4%;
@@ -658,7 +658,7 @@ iframe {
   width: 100%;
   background-color: rgba(0,0,0, 0.5);
   position: absolute;
-  top:13%;
+  top:19%;
   left:0;
   right:0;
   margin-left:auto;
@@ -679,10 +679,13 @@ iframe {
       font-size: 0.75rem;
       line-height: 0.75rem;
       margin: 0;
-    }
+    } 
+
+    
   
       @include breakpoint(small) {
           width: 80%;
+          top:16%;
           
            .show-post-description {
               font-size: 2rem;
@@ -696,6 +699,9 @@ iframe {
               margin: 0;
             }   
    }
+   @include breakpoint(medium) {
+          top:13%;
+     }
 }
 /* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
 /* - - - - - - - - - - - - - - - - - - - - -  - - - -  Post Panel  - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
