update to user popup

--- a/app/assets/stylesheets/_login.scss
+++ b/app/assets/stylesheets/_login.scss
@@ -46,6 +46,7 @@
         z-index: 2;
         top:65px;
         margin: 0;
+        text-align: center;
         right:30px;
         background-color: rgba(0,0,0,0.8);
         border-radius:0 0 5px 5px;
