--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -9,41 +9,65 @@
                               <% end %>
                       </div>
                       <li class="login-links username-sidebar"><p><%= current_user.username %></p></li>
-                      <li class="login-links"><%= link_to 'LOGOUT', destroy_user_session_path, method: :delete %></li>
+
+                      <%= link_to destroy_user_session_path, method: :delete do %>
+                            <li class="login-links login-section-sidebar"><p>LOGOUT</p></li>
+                      <% end %>
+
                   <% else %>
-                      <li class="login-links"><%= link_to "SIGN IN / SIGN UP" , new_user_session_path%></li>
+                      <%= link_to new_user_session_path do%>
+                            <li class="login-links"><p>SIGN IN / SIGN UP</p></li>
+                      <% end %>
                   <% end %>
                 
                   <!-- Nav Button Section -->
 
+                 <%= nav_link_to posts_mostrecent_path  do %>
+                      <li class="user-links"><p>LATEST</p></li>
+                 <% end %>
 
-                 <li class="user-links"><%= nav_link_to 'LATEST' , posts_mostrecent_path  %></li>
-                 <li class="user-links"><%= nav_link_to 'MOST LIKED' , posts_mostliked_path  %></li>
-                 <li class="user-links">
-                       <% if params[:p] == "shuffle" %>
-                            <%= nav_link_to 'SHUFFLE AGAIN!' , posts_shuffle_path(p: "shuffle")  %>
-                       <% else %>
-                            <%= nav_link_to 'SHUFFLE!' , posts_shuffle_path(p: "shuffle")  %>
-                       <% end %>
-                 </li>
+                 <%= nav_link_to posts_mostliked_path do %>
+                      <li class="user-links"><p>MOST LIKED</p></li>
+                 <% end %>
+
+                 <% if params[:p] == "shuffle" %>
+                      <%= nav_link_to posts_shuffle_path(p: "shuffle") do %>
+                            <li class="user-links"><p>SHUFFLE AGAIN!</p></li>
+                      <% end %>
+                 <% else %>
+                      <%= nav_link_to posts_shuffle_path(p: "shuffle") do %>
+                            <li class="user-links"><p>SHUFFLE!</p></li>
+                      <% end %>
+                 <% end %>
 
                   <!-- Contribute Section -->
-
-                  <li class="contribute-link"><%= link_to 'CONTRIBUTE', submit_path %></li>
+                 <%= link_to submit_path do %>
+                       <li class="contribute-link"><p>CONTRIBUTE</p></li>
+                  <% end %>
 
                   <!-- Admin Section -->
 
                  <% if current_user.try(:admin?) %>
-                      <li class="admin-links"><%= link_to 'NEW POST' , new_post_path  %></li>
-                      <li class="admin-links"><%= link_to 'NEW CATEGORY' , new_category_path  %></li>
-                      <li class="admin-links"><%= link_to 'CONTRIBUTIONS' , contributions_path  %></li>
+                      <%= link_to new_post_path  do %>
+                             <li class="admin-links"><p>NEW POST</p></li>
+                      <% end %>
+                      <%= link_to new_category_path  do %>
+                             <li class="admin-links"><p>NEW CATEGORY</p></li>
+                      <% end %>
+                      <%= link_to contributions_path  do %>
+                             <li class="admin-links"><p>CONTRIBUTIONS</p></li>
+                      <% end %>
                   <%end%>
 
 
                   <!-- Static Section -->
                   <div class="static-section">
-                      <li class="static-links"><%= nav_link_to 'ABOUT', application_about_path %></li>
-                      <li class="static-links"><%= nav_link_to 'COPYRIGHT', application_copyright_path %> </li>
+                      <%= nav_link_to application_about_path do %>
+                              <li class="static-links"><p>ABOUT</p></li>
+                      <% end %>
+                      <%= nav_link_to application_copyright_path do %>
+                              <li class="static-links"><p>COPYRIGHT</p></li>
+                      <% end %>
                   </div>
             </ul>
 </div>
